--- a/canva/index.html
+++ b/canva/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas</title>
-    <link rel="stylesheet" href="main.css">
-   
-</head>
-<body>
-    <canvas width="500px" height="500px" id="canvas"></canvas>
-      
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="btn-wrapper">
+        <button>small</button>
+        <button>medium</button>
+        <button>large</button>
+      </div>
+      <canvas id="canvas"></canvas>
+    </div>
     <script src="main.js"></script>
-</body>
-
+  </body>
 </html>
