--- a/LocalStorage/index.html
+++ b/LocalStorage/index.html
@@ -11,15 +11,12 @@
     
     <div class="main-container">
         <div class="page-content">
-            <p>Food Items</p>
+            <h2>Food Items</h2>
             <ul class="plates">
-                <li> 
-                    <input type="checkbox" name="" id="" data-set="item">
-                    <label for="item">Food</label>
-                </li>
+                <li> Loading items....... </li>
             </ul>
-            <form action="">
-                <input type="text" name="" id="userInput" placeholder="Enter the items" class="user-input">
+            <form action="" class="add-items">
+                <input type="text" name="item" id="userInput" placeholder="Enter the items" class="user-input">
                 <button type="submit" class="add-btn">+ Add Item</button>
             </form>
             
